# FastHSS

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.csv  benchmarks_results
src/: main.c
src/include/: lib-2k-prs.h  lib-mesg.h  lib-misc.h  lib-timing.h
src/lib/: lib-2k-prs.c
src/tests/: 2k-prs.c
src/utils/: lib-mesg.c  lib-misc.c  lib-timing.c
src/xyz/: xyz.c  xyz_v1.c
