cmake_minimum_required(VERSION 3.13)
project(2k_power_residue_symbols C)

set(CMAKE_C_STANDARD 99)


# Headers dir
include_directories(src/include)

# Tests
add_executable(
        2k-prs-test
        # sources
        src/tests/2k-prs.c

        # utils
        src/utils/lib-mesg.c
        src/utils/lib-timing.c
        src/utils/lib-misc.c

        # project sources
        src/lib/lib-2k-prs.c)

# Main
add_executable(
        2k-prs
        # sources
        src/main.c

        # utils
        src/utils/lib-mesg.c
        src/utils/lib-timing.c
        src/utils/lib-misc.c

        # project sources
        src/lib/lib-2k-prs.c)


# Linking libraries
# - GMP
# - Math
# - Pcb
target_link_libraries(2k-prs gmp m)